# apps/auth-service/src/routes/auth.router.ts
@@ -1,8 +1,9 @@
 import express, { Router } from 'express';
-import { userRegistration } from '../controllers/auth.controller';
+import { userRegistration, verifyUser } from '../controllers/auth.controller';
 
 const router: Router = express.Router();
 
 router.post("/user-registration", userRegistration);
+router.post("/verify-user", verifyUser);
 
 export default router;
